--- a/src/main/resources/FXML/MainWindow.fxml
+++ b/src/main/resources/FXML/MainWindow.fxml
@@ -1,18 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.cell.PropertyValueFactory?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="824.0" prefWidth="1011.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.acuvuz.BarriersDesktop.controllers.MainController">
+<BorderPane prefHeight="824.0" prefWidth="1105.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.acuvuz.BarriersDesktop.controllers.MainController">
    <center>
       <TableView fx:id="movementsTableView" prefHeight="464.0" prefWidth="643.0" BorderPane.alignment="CENTER">
         <columns>
@@ -21,12 +29,12 @@
                     <PropertyValueFactory property="id" />
                 </cellValueFactory>
             </TableColumn>
-            <TableColumn prefWidth="78.0" text="Название события">
+            <TableColumn prefWidth="78.0" text="Событие">
                 <cellValueFactory>
                     <PropertyValueFactory property="event_name" />
                 </cellValueFactory>
             </TableColumn>
-            <TableColumn prefWidth="97.0" text="Название корпуса">
+            <TableColumn prefWidth="97.0" text="Здание">
                 <cellValueFactory>
                     <PropertyValueFactory property="building_name" />
                 </cellValueFactory>
@@ -65,7 +73,7 @@
       </TableView>
    </center>
    <top>
-      <MenuBar prefHeight="43.0" prefWidth="893.0" BorderPane.alignment="CENTER">
+      <MenuBar prefHeight="43.0" prefWidth="1072.0" BorderPane.alignment="CENTER">
         <menus>
           <Menu mnemonicParsing="false" text="Все">
             <items>
@@ -86,14 +94,128 @@
       </MenuBar>
    </top>
    <right>
-      <VBox prefHeight="464.0" prefWidth="198.0" BorderPane.alignment="CENTER">
+      <VBox prefHeight="781.0" prefWidth="289.0" BorderPane.alignment="CENTER">
          <children>
+            <VBox prefHeight="303.0" prefWidth="198.0">
+               <children>
+                  <Label prefHeight="25.0" prefWidth="192.0" text="Фильтр &quot;От&quot;" textAlignment="CENTER">
+                     <font>
+                        <Font name="System Bold" size="13.0" />
+                     </font>
+                  </Label>
+                  <GridPane>
+                     <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+                     </columnConstraints>
+                     <rowConstraints>
+                        <RowConstraints maxHeight="26.0" minHeight="10.0" prefHeight="26.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="42.0" minHeight="10.0" prefHeight="28.0" vgrow="SOMETIMES" />
+                     </rowConstraints>
+                     <children>
+                        <HBox GridPane.rowIndex="1">
+                           <children>
+                              <Spinner fx:id="fromDay" prefHeight="24.0" prefWidth="81.0" />
+                              <ComboBox fx:id="fromMonth" prefHeight="24.0" prefWidth="83.0" />
+                              <Spinner fx:id="fromYear" layoutX="91.0" layoutY="10.0" prefHeight="24.0" prefWidth="102.0" />
+                           </children>
+                        </HBox>
+                        <HBox>
+                           <children>
+                              <Label alignment="CENTER" prefHeight="16.0" prefWidth="83.0" text="День" />
+                              <Label alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="16.0" prefWidth="83.0" text="Месяц" />
+                              <Label alignment="CENTER" layoutX="93.0" layoutY="10.0" prefHeight="16.0" prefWidth="83.0" text="Год" />
+                           </children>
+                        </HBox>
+                     </children>
+                  </GridPane>
+                  <GridPane layoutX="10.0" layoutY="35.0">
+                     <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+                     </columnConstraints>
+                     <rowConstraints>
+                        <RowConstraints maxHeight="26.0" minHeight="10.0" prefHeight="26.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="42.0" minHeight="10.0" prefHeight="28.0" vgrow="SOMETIMES" />
+                     </rowConstraints>
+                     <children>
+                        <HBox GridPane.rowIndex="1">
+                           <children>
+                              <Spinner fx:id="fromHour" prefHeight="24.0" prefWidth="87.0" />
+                              <Separator prefHeight="11.0" prefWidth="51.0" />
+                              <Spinner fx:id="fromMinute" layoutX="10.0" layoutY="10.0" prefHeight="24.0" prefWidth="90.0" />
+                           </children>
+                        </HBox>
+                        <HBox>
+                           <children>
+                              <Label alignment="CENTER" prefHeight="16.0" prefWidth="83.0" text="Час" />
+                              <Separator prefHeight="11.0" prefWidth="57.0" />
+                              <Label alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="16.0" prefWidth="83.0" text="Минута" />
+                           </children>
+                        </HBox>
+                     </children>
+                  </GridPane>
+                  <Label layoutX="10.0" layoutY="10.0" prefHeight="25.0" prefWidth="192.0" text="Фильтр &quot;До&quot;" textAlignment="CENTER">
+                     <font>
+                        <Font name="System Bold" size="13.0" />
+                     </font>
+                  </Label>
+                  <GridPane>
+                     <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+                     </columnConstraints>
+                     <rowConstraints>
+                        <RowConstraints maxHeight="26.0" minHeight="10.0" prefHeight="26.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="42.0" minHeight="10.0" prefHeight="28.0" vgrow="SOMETIMES" />
+                     </rowConstraints>
+                     <children>
+                        <HBox GridPane.rowIndex="1">
+                           <children>
+                              <Spinner fx:id="toDay" prefHeight="24.0" prefWidth="81.0" />
+                              <ComboBox fx:id="toMonth" prefHeight="24.0" prefWidth="83.0" />
+                              <Spinner fx:id="toYear" layoutX="91.0" layoutY="10.0" prefHeight="24.0" prefWidth="102.0" />
+                           </children>
+                        </HBox>
+                        <HBox>
+                           <children>
+                              <Label alignment="CENTER" prefHeight="16.0" prefWidth="83.0" text="День" />
+                              <Label alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="16.0" prefWidth="83.0" text="Месяц" />
+                              <Label alignment="CENTER" layoutX="93.0" layoutY="10.0" prefHeight="16.0" prefWidth="83.0" text="Год" />
+                           </children>
+                        </HBox>
+                     </children>
+                  </GridPane>
+                  <GridPane layoutX="10.0" layoutY="89.0">
+                     <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+                     </columnConstraints>
+                     <rowConstraints>
+                        <RowConstraints maxHeight="26.0" minHeight="10.0" prefHeight="26.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="42.0" minHeight="10.0" prefHeight="28.0" vgrow="SOMETIMES" />
+                     </rowConstraints>
+                     <children>
+                        <HBox GridPane.rowIndex="1">
+                           <children>
+                              <Spinner fx:id="toHour" prefHeight="24.0" prefWidth="87.0" />
+                              <Separator prefHeight="11.0" prefWidth="51.0" />
+                              <Spinner fx:id="toMinute" layoutX="10.0" layoutY="10.0" prefHeight="24.0" prefWidth="90.0" />
+                           </children>
+                        </HBox>
+                        <HBox>
+                           <children>
+                              <Label alignment="CENTER" prefHeight="16.0" prefWidth="83.0" text="Час" />
+                              <Separator prefHeight="11.0" prefWidth="57.0" />
+                              <Label alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="16.0" prefWidth="83.0" text="Минута" />
+                           </children>
+                        </HBox>
+                     </children>
+                  </GridPane>
+               </children>
+            </VBox>
             <TextField fx:id="fromTextField" promptText="Время &quot;От&quot;" />
             <TextField fx:id="toTextField" promptText="Время &quot;До&quot;" />
-            <Button fx:id="updateButton" mnemonicParsing="false" onAction="#onUpdateButtonClick" prefHeight="24.0" prefWidth="204.0" text="Обновить список" />
-            <Button mnemonicParsing="false" prefHeight="24.0" prefWidth="232.0" text="Перемещения на человека" />
+            <Button fx:id="updateButton" mnemonicParsing="false" onAction="#onUpdateButtonClick" prefHeight="24.0" prefWidth="290.0" text="Обновить список" />
+            <Button fx:id="personalMovementsButton" mnemonicParsing="false" onAction="#onPersonalMovementsButtonClick" prefHeight="24.0" prefWidth="293.0" text="Перемещения на человека" />
             <Separator orientation="VERTICAL" prefHeight="32.0" prefWidth="0.0" />
-            <Button mnemonicParsing="false" onAction="#onTurnOffPortButtonClick" prefHeight="24.0" prefWidth="227.0" style="-fx-background-color: red;" text="Выключить порт" textFill="#fcfcfc" />
+            <Button mnemonicParsing="false" onAction="#onTurnOffPortButtonClick" prefHeight="24.0" prefWidth="304.0" style="-fx-background-color: red;" text="Выключить порт" textFill="#fcfcfc" />
          </children>
       </VBox>
    </right>
