--- a/src/main/resources/FXML/MainWindow.fxml
+++ b/src/main/resources/FXML/MainWindow.fxml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.Separator?>
-<?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -103,31 +102,7 @@
                         <Font name="System Bold" size="13.0" />
                      </font>
                   </Label>
-                  <GridPane>
-                     <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-                     </columnConstraints>
-                     <rowConstraints>
-                        <RowConstraints maxHeight="26.0" minHeight="10.0" prefHeight="26.0" vgrow="SOMETIMES" />
-                        <RowConstraints maxHeight="42.0" minHeight="10.0" prefHeight="28.0" vgrow="SOMETIMES" />
-                     </rowConstraints>
-                     <children>
-                        <HBox GridPane.rowIndex="1">
-                           <children>
-                              <Spinner fx:id="fromDay" prefHeight="24.0" prefWidth="81.0" />
-                              <ComboBox fx:id="fromMonth" prefHeight="24.0" prefWidth="83.0" />
-                              <Spinner fx:id="fromYear" layoutX="91.0" layoutY="10.0" prefHeight="24.0" prefWidth="102.0" />
-                           </children>
-                        </HBox>
-                        <HBox>
-                           <children>
-                              <Label alignment="CENTER" prefHeight="16.0" prefWidth="83.0" text="День" />
-                              <Label alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="16.0" prefWidth="83.0" text="Месяц" />
-                              <Label alignment="CENTER" layoutX="93.0" layoutY="10.0" prefHeight="16.0" prefWidth="83.0" text="Год" />
-                           </children>
-                        </HBox>
-                     </children>
-                  </GridPane>
+                  <DatePicker fx:id="fromDate" prefHeight="24.0" prefWidth="228.0" />
                   <GridPane layoutX="10.0" layoutY="35.0">
                      <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
@@ -139,9 +114,9 @@
                      <children>
                         <HBox GridPane.rowIndex="1">
                            <children>
-                              <Spinner fx:id="fromHour" prefHeight="24.0" prefWidth="87.0" />
-                              <Separator prefHeight="11.0" prefWidth="51.0" />
-                              <Spinner fx:id="fromMinute" layoutX="10.0" layoutY="10.0" prefHeight="24.0" prefWidth="90.0" />
+                              <TextField fx:id="fromHour" prefHeight="24.0" prefWidth="84.0" />
+                              <Separator prefHeight="11.0" prefWidth="58.0" />
+                              <TextField fx:id="fromMinute" layoutX="10.0" layoutY="10.0" prefHeight="24.0" prefWidth="84.0" />
                            </children>
                         </HBox>
                         <HBox>
@@ -158,31 +133,7 @@
                         <Font name="System Bold" size="13.0" />
                      </font>
                   </Label>
-                  <GridPane>
-                     <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-                     </columnConstraints>
-                     <rowConstraints>
-                        <RowConstraints maxHeight="26.0" minHeight="10.0" prefHeight="26.0" vgrow="SOMETIMES" />
-                        <RowConstraints maxHeight="42.0" minHeight="10.0" prefHeight="28.0" vgrow="SOMETIMES" />
-                     </rowConstraints>
-                     <children>
-                        <HBox GridPane.rowIndex="1">
-                           <children>
-                              <Spinner fx:id="toDay" prefHeight="24.0" prefWidth="81.0" />
-                              <ComboBox fx:id="toMonth" prefHeight="24.0" prefWidth="83.0" />
-                              <Spinner fx:id="toYear" layoutX="91.0" layoutY="10.0" prefHeight="24.0" prefWidth="102.0" />
-                           </children>
-                        </HBox>
-                        <HBox>
-                           <children>
-                              <Label alignment="CENTER" prefHeight="16.0" prefWidth="83.0" text="День" />
-                              <Label alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="16.0" prefWidth="83.0" text="Месяц" />
-                              <Label alignment="CENTER" layoutX="93.0" layoutY="10.0" prefHeight="16.0" prefWidth="83.0" text="Год" />
-                           </children>
-                        </HBox>
-                     </children>
-                  </GridPane>
+                  <DatePicker fx:id="toDate" prefHeight="24.0" prefWidth="228.0" />
                   <GridPane layoutX="10.0" layoutY="89.0">
                      <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
@@ -194,9 +145,9 @@
                      <children>
                         <HBox GridPane.rowIndex="1">
                            <children>
-                              <Spinner fx:id="toHour" prefHeight="24.0" prefWidth="87.0" />
+                              <TextField fx:id="toHour" prefHeight="24.0" prefWidth="84.0"/>
                               <Separator prefHeight="11.0" prefWidth="51.0" />
-                              <Spinner fx:id="toMinute" layoutX="10.0" layoutY="10.0" prefHeight="24.0" prefWidth="90.0" />
+                              <TextField fx:id="toMinute" layoutX="10.0" layoutY="10.0" prefHeight="24.0" prefWidth="84.0" />
                            </children>
                         </HBox>
                         <HBox>
