--- a/src/main/resources/FXML/MainWindow.fxml
+++ b/src/main/resources/FXML/MainWindow.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
@@ -75,7 +76,7 @@
                <children>
                   <Label prefHeight="25.0" prefWidth="192.0" text="Фильтр &quot;От&quot;" textAlignment="CENTER">
                      <font>
-                        <Font name="System Bold" size="13.0" />
+                        <Font name="System Bold" size="16.0" />
                      </font>
                   </Label>
                   <DatePicker fx:id="fromDate" prefHeight="24.0" prefWidth="228.0" />
@@ -91,23 +92,30 @@
                         <HBox GridPane.rowIndex="1">
                            <children>
                               <TextField fx:id="fromHour" prefHeight="24.0" prefWidth="84.0" />
-                              <Separator prefHeight="11.0" prefWidth="58.0" />
-                              <TextField fx:id="fromMinute" layoutX="10.0" layoutY="10.0" prefHeight="24.0" prefWidth="84.0" />
+                              <TextField fx:id="fromMinute" layoutX="10.0" layoutY="10.0" prefHeight="24.0" prefWidth="84.0">
+                                 <HBox.margin>
+                                    <Insets left="58.0" />
+                                 </HBox.margin></TextField>
                            </children>
                         </HBox>
                         <HBox>
                            <children>
                               <Label alignment="CENTER" prefHeight="16.0" prefWidth="83.0" text="Час" />
-                              <Separator prefHeight="11.0" prefWidth="57.0" />
-                              <Label alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="16.0" prefWidth="83.0" text="Минута" />
+                              <Label alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="16.0" prefWidth="83.0" text="Минута">
+                                 <HBox.margin>
+                                    <Insets left="58.0" />
+                                 </HBox.margin></Label>
                            </children>
                         </HBox>
                      </children>
                   </GridPane>
                   <Label layoutX="10.0" layoutY="10.0" prefHeight="25.0" prefWidth="192.0" text="Фильтр &quot;До&quot;" textAlignment="CENTER">
                      <font>
-                        <Font name="System Bold" size="13.0" />
+                        <Font name="System Bold" size="16.0" />
                      </font>
+                     <VBox.margin>
+                        <Insets />
+                     </VBox.margin>
                   </Label>
                   <DatePicker fx:id="toDate" prefHeight="24.0" prefWidth="228.0" />
                   <GridPane layoutX="10.0" layoutY="89.0">
@@ -122,25 +130,45 @@
                         <HBox GridPane.rowIndex="1">
                            <children>
                               <TextField fx:id="toHour" prefHeight="24.0" prefWidth="84.0" />
-                              <Separator prefHeight="11.0" prefWidth="57.0" />
-                              <TextField fx:id="toMinute" layoutX="10.0" layoutY="10.0" prefHeight="24.0" prefWidth="84.0" />
+                              <TextField fx:id="toMinute" layoutX="10.0" layoutY="10.0" prefHeight="24.0" prefWidth="84.0">
+                                 <HBox.margin>
+                                    <Insets left="58.0" />
+                                 </HBox.margin></TextField>
                            </children>
                         </HBox>
                         <HBox>
                            <children>
                               <Label alignment="CENTER" prefHeight="16.0" prefWidth="83.0" text="Час" />
-                              <Separator prefHeight="11.0" prefWidth="57.0" />
-                              <Label alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="16.0" prefWidth="83.0" text="Минута" />
+                              <Label alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="16.0" prefWidth="83.0" text="Минута">
+                                 <HBox.margin>
+                                    <Insets left="58.0" />
+                                 </HBox.margin></Label>
                            </children>
                         </HBox>
                      </children>
                   </GridPane>
+                  <Button fx:id="updateButton" mnemonicParsing="false" onAction="#onUpdateButtonClick" prefHeight="38.0" prefWidth="228.0" text="Обновить список">
+                     <VBox.margin>
+                        <Insets top="5.0" />
+                     </VBox.margin>
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="personalMovementsButton" mnemonicParsing="false" onAction="#onPersonalMovementsButtonClick" prefHeight="38.0" prefWidth="228.0" text="Перемещения на человека">
+                     <VBox.margin>
+                        <Insets top="10.0" />
+                     </VBox.margin>
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Button>
                </children>
+               <VBox.margin>
+                  <Insets left="15.0" top="20.0" />
+               </VBox.margin>
             </VBox>
-            <Button fx:id="updateButton" mnemonicParsing="false" onAction="#onUpdateButtonClick" prefHeight="24.0" prefWidth="290.0" text="Обновить список" />
-            <Button fx:id="personalMovementsButton" mnemonicParsing="false" onAction="#onPersonalMovementsButtonClick" prefHeight="24.0" prefWidth="293.0" text="Перемещения на человека" />
             <Separator orientation="VERTICAL" prefHeight="32.0" prefWidth="0.0" />
-            <Button mnemonicParsing="false" onAction="#onTurnOffPortButtonClick" prefHeight="24.0" prefWidth="304.0" style="-fx-background-color: red;" text="Выключить порт" textFill="#fcfcfc" />
          </children>
       </VBox>
    </right>
