--- a/src/main/resources/FXML/MainWindow.fxml
+++ b/src/main/resources/FXML/MainWindow.fxml
@@ -79,7 +79,7 @@
                         <Font name="System Bold" size="16.0" />
                      </font>
                   </Label>
-                  <DatePicker fx:id="fromDate" prefHeight="24.0" prefWidth="228.0" />
+                  <DatePicker fx:id="fromDate" prefHeight="24.0" prefWidth="228.0" promptText="сегодня" />
                   <GridPane layoutX="10.0" layoutY="35.0">
                      <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
@@ -91,8 +91,8 @@
                      <children>
                         <HBox GridPane.rowIndex="1">
                            <children>
-                              <TextField fx:id="fromHour" prefHeight="24.0" prefWidth="84.0" />
-                              <TextField fx:id="fromMinute" layoutX="10.0" layoutY="10.0" prefHeight="24.0" prefWidth="84.0">
+                              <TextField fx:id="fromHour" prefHeight="24.0" prefWidth="84.0" promptText="00" />
+                              <TextField fx:id="fromMinute" layoutX="10.0" layoutY="10.0" prefHeight="24.0" prefWidth="84.0" promptText="00">
                                  <HBox.margin>
                                     <Insets left="58.0" />
                                  </HBox.margin></TextField>
@@ -117,7 +117,7 @@
                         <Insets />
                      </VBox.margin>
                   </Label>
-                  <DatePicker fx:id="toDate" prefHeight="24.0" prefWidth="228.0" />
+                  <DatePicker fx:id="toDate" prefHeight="24.0" prefWidth="228.0" promptText="сегодня" />
                   <GridPane layoutX="10.0" layoutY="89.0">
                      <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
@@ -129,8 +129,8 @@
                      <children>
                         <HBox GridPane.rowIndex="1">
                            <children>
-                              <TextField fx:id="toHour" prefHeight="24.0" prefWidth="84.0" />
-                              <TextField fx:id="toMinute" layoutX="10.0" layoutY="10.0" prefHeight="24.0" prefWidth="84.0">
+                              <TextField fx:id="toHour" prefHeight="24.0" prefWidth="84.0" promptText="23" />
+                              <TextField fx:id="toMinute" layoutX="10.0" layoutY="10.0" prefHeight="24.0" prefWidth="84.0" promptText="59">
                                  <HBox.margin>
                                     <Insets left="58.0" />
                                  </HBox.margin></TextField>
