--- a/src/main/resources/FXML/MainWindow.fxml
+++ b/src/main/resources/FXML/MainWindow.fxml
@@ -4,7 +4,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -73,7 +72,7 @@
    <right>
       <VBox prefHeight="781.0" prefWidth="289.0" BorderPane.alignment="CENTER">
          <children>
-            <VBox prefHeight="303.0" prefWidth="198.0">
+            <VBox prefHeight="554.0" prefWidth="274.0">
                <children>
                   <Label prefHeight="25.0" prefWidth="192.0" text="Фильтр &quot;От&quot;" textAlignment="CENTER">
                      <font>
@@ -164,12 +163,39 @@
                         <Font size="14.0" />
                      </font>
                   </Button>
+                  <Label text="Управление турникетами">
+                     <VBox.margin>
+                        <Insets top="40.0" />
+                     </VBox.margin>
+                     <font>
+                        <Font name="System Bold" size="16.0" />
+                     </font>
+                  </Label>
+                  <Button fx:id="openEnterBarrier1Button" mnemonicParsing="false" onAction="#onOpenEnterBarrier1ButtonClick" prefHeight="20.0" prefWidth="228.0" text="Открыть турникет 1 на вход">
+                     <VBox.margin>
+                        <Insets top="10.0" />
+                     </VBox.margin>
+                  </Button>
+                  <Button fx:id="openExitBarrier1Button" mnemonicParsing="false" onAction="#onOpenExitBarrier1ButtonClick" prefHeight="20.0" prefWidth="228.0" text="Открыть турникет 1 на выход">
+                     <VBox.margin>
+                        <Insets top="10.0" />
+                     </VBox.margin>
+                  </Button>
+                  <Button fx:id="openEnterBarrier2Button" mnemonicParsing="false" onAction="#onOpenEnterBarrier2ButtonClick" prefHeight="20.0" prefWidth="228.0" text="Открыть турникет 2 на вход">
+                     <VBox.margin>
+                        <Insets top="10.0" />
+                     </VBox.margin>
+                  </Button>
+                  <Button fx:id="openExitBarrier2Button" layoutX="10.0" layoutY="453.0" mnemonicParsing="false" onAction="#onOpenExitBarrier2ButtonClick" prefHeight="20.0" prefWidth="228.0" text="Открыть турникет 2 на выход">
+                     <VBox.margin>
+                        <Insets top="10.0" />
+                     </VBox.margin>
+                  </Button>
                </children>
                <VBox.margin>
                   <Insets left="15.0" top="20.0" />
                </VBox.margin>
             </VBox>
-            <Separator orientation="VERTICAL" prefHeight="32.0" prefWidth="0.0" />
          </children>
       </VBox>
    </right>
